[gd_scene load_steps=24 format=2]

[ext_resource path="res://Entities/Animals/Sheep.gd" type="Script" id=1]
[ext_resource path="res://Assets/6 Sheep/sheep_walk.png" type="Texture" id=2]
[ext_resource path="res://Entities/Animals/FOVPolygon.gd" type="Script" id=3]

[sub_resource type="ConvexPolygonShape2D" id=21]

[sub_resource type="ConvexPolygonShape2D" id=22]

[sub_resource type="CapsuleShape2D" id=18]
radius = 13.0
height = 14.0

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 256, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "walk_top",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "walk_bot",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
} ]

[node name="Sheep" type="KinematicBody2D"]
script = ExtResource( 1 )
hunger_rate = -0.5
health = 10
max_health = 10
max_hunger = 50
hunger = 50
speed = 100

[node name="FOVPolygon" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource( 3 )
fov_radius = 200
hearing_distance = 50
view_distance = 100

[node name="VisionCollision" type="CollisionShape2D" parent="FOVPolygon"]
shape = SubResource( 21 )

[node name="HearingCollision" type="CollisionShape2D" parent="FOVPolygon"]
shape = SubResource( 22 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 18 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 20 )
animation = "walk_left"

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PanicTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="InfectionTimer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[node name="TestActionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="MateCooldownTimer" type="Timer" parent="."]

[node name="MateTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="FOVPolygon" to="." method="_on_FOVPolygon_body_entered"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
[connection signal="timeout" from="PanicTimer" to="." method="_on_PanicTimer_timeout"]
[connection signal="timeout" from="InfectionTimer" to="." method="_on_InfectionTimer_timeout"]
[connection signal="timeout" from="TestActionTimer" to="." method="_on_TestActionTimer_timeout"]
[connection signal="timeout" from="MateTimer" to="." method="_on_MateTimer_timeout"]
